[gd_scene load_steps=23 format=3 uid="uid://bqskqqchnsfs0"]

[ext_resource type="Script" path="res://Characters/enemies/Grassland Rat/rat_enemy.gd" id="1_h72br"]
[ext_resource type="Texture2D" uid="uid://bxs36c0xgtld" path="res://Art/Characters/grass-rat-sheet.png" id="2_obw7f"]
[ext_resource type="Texture2D" uid="uid://djvqiy1hrchg2" path="res://Art/effects/png/death-effect.png" id="2_sd8kd"]
[ext_resource type="Texture2D" uid="uid://criwagfhfe6t6" path="res://Art/entities/png/grass-rat-Sheet.png" id="3_4si1l"]

[sub_resource type="AtlasTexture" id="AtlasTexture_oy6f4"]
atlas = ExtResource("2_sd8kd")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_oe4no"]
atlas = ExtResource("2_sd8kd")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_w6o0l"]
atlas = ExtResource("2_sd8kd")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_5f8aw"]
atlas = ExtResource("2_sd8kd")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_46xsv"]
atlas = ExtResource("2_sd8kd")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_0mus8"]
atlas = ExtResource("2_sd8kd")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_l2dqu"]
atlas = ExtResource("2_sd8kd")
region = Rect2(192, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_vtrd5"]
atlas = ExtResource("2_sd8kd")
region = Rect2(224, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_72748"]
atlas = ExtResource("2_obw7f")
region = Rect2(0, 0, 32, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_imekt"]
atlas = ExtResource("3_4si1l")
region = Rect2(0, 16, 32, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_rt3qr"]
atlas = ExtResource("2_obw7f")
region = Rect2(32, 0, 32, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_1h2hi"]
atlas = ExtResource("2_obw7f")
region = Rect2(64, 0, 32, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_virsi"]
atlas = ExtResource("3_4si1l")
region = Rect2(32, 16, 32, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_dfkc0"]
atlas = ExtResource("3_4si1l")
region = Rect2(96, 16, 32, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_wpd6h"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_oy6f4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oe4no")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w6o0l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5f8aw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_46xsv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0mus8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l2dqu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vtrd5")
}],
"loop": true,
"name": &"death",
"speed": 16.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_72748")
}],
"loop": true,
"name": &"idle_left",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_imekt")
}],
"loop": true,
"name": &"idle_right",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_rt3qr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1h2hi")
}],
"loop": true,
"name": &"walk_left",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_virsi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dfkc0")
}],
"loop": true,
"name": &"walk_right",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_lle5c"]
size = Vector2(20, 7)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0svvv"]
size = Vector2(22, 13)

[sub_resource type="CircleShape2D" id="CircleShape2D_4hd8n"]
radius = 150.0

[node name="rat_enemy" type="CharacterBody2D" groups=["enemy"]]
z_index = 2
script = ExtResource("1_h72br")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="." groups=["enemy"]]
sprite_frames = SubResource("SpriteFrames_wpd6h")
animation = &"idle_left"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 0.5)
shape = SubResource("RectangleShape2D_lle5c")

[node name="hitbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="hitbox"]
position = Vector2(0, 0.5)
shape = SubResource("RectangleShape2D_0svvv")

[node name="detection_area" type="Area2D" parent="."]
disable_mode = 1
collision_layer = 255
collision_mask = 255

[node name="CollisionShape2D" type="CollisionShape2D" parent="detection_area"]
shape = SubResource("CircleShape2D_4hd8n")

[connection signal="area_entered" from="hitbox" to="." method="_on_hitbox_area_entered"]
[connection signal="body_entered" from="detection_area" to="." method="_on_detection_area_body_entered"]
[connection signal="body_exited" from="detection_area" to="." method="_on_detection_area_body_exited"]
